mutants.out/log/src__proto__client__ent.rs_line_23_col_9.log

*** src/proto/client/ent.rs:23:9: replace Client<S>::get_batch_status -> Result<Option<BatchStatus>, Error> with Ok(Some(Default::default()))

*** mutation diff:
--- src/proto/client/ent.rs
+++ replace Client<S>::get_batch_status -> Result<Option<BatchStatus>, Error> with Ok(Some(Default::default()))
@@ -15,18 +15,17 @@
     /// Fetch information on a job's execution progress from Faktory.
     pub async fn get_progress(&mut self, jid: JobId) -> Result<Option<Progress>, Error> {
         let cmd = Track::Get(jid);
         self.issue(&cmd).await?.read_json().await
     }
 
     /// Fetch information on a batch of jobs execution progress.
     pub async fn get_batch_status(&mut self, bid: BatchId) -> Result<Option<BatchStatus>, Error> {
-        let cmd = GetBatchStatus::from(bid);
-        self.issue(&cmd).await?.read_json().await
+        Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     /// Initiate a new batch of jobs.
     pub async fn start_batch(&mut self, batch: Batch) -> Result<BatchHandle<'_, S>, Error> {
         let bid = self.issue(&batch).await?.read_bid().await?;
         Ok(BatchHandle::new(bid, self))
     }
 


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
    Finished dev [unoptimized + debuginfo] target(s) in 1.05s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `BatchStatus: Default` is not satisfied
  --> src/proto/client/ent.rs:23:17
   |
23 |         Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
   |                 ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `BatchStatus`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
